fixed navbar for scrolling as well as div's overflowing on top

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,7 @@
 @import "landing";
 @import "listing";
 @import "preferences";
+
+body { 
+    padding-top: 65px; 
+}
